:sparkles: Adição do material das Aulas 1 e 2

--- a/Projetos/2019/latex/exemplo_latex.tex
+++ b/Projetos/2019/latex/exemplo_latex.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,twocolumn]{article}
+\documentclass[12pt]{article}
 
 \usepackage[brazil]{babel}
 \usepackage[utf8]{inputenc}
@@ -14,7 +14,7 @@
 % Definição das variáveis de texto
 \title{Exemplo de uso do \LaTeX}
 \author{Chauã Queirolo\\Fulano de Tal}
-%\date{}
+\date{}
 
 % Local do conteudo do trabalho
 \begin{document}
@@ -22,17 +22,10 @@
 \maketitle
 \tableofcontents
 
-% Divisão do trabalho
-% \part     -> book
-% \chapter  -> book, report
-% \section  -> todos
-% \subsection     -> todos
-% \subsubsection  -> todos
-
 \section{Introdução}
 \label{sec_introducao}
 
-Nam dictum mauris et diam convallis, sed sagittis dolor blandit. Fusce iaculis, mi eu molestie ullamcorper, lectus nibh scelerisque sem, nec pulvinar massa purus sit amet quam. Integer nec ante et purus lobortis feugiat ac ac velit. Duis pellentesque tincidunt ex, a pulvinar sem pharetra nec. 
+Nam dictum mauris et di\include{exemplo}am convallis, sed sagittis dolor blandit. Fusce iaculis, mi eu molestie ullamcorper, lectus nibh scelerisque sem, nec pulvinar massa purus sit amet quam. Integer nec ante et purus lobortis feugiat ac ac velit. Duis pellentesque tincidunt ex, a pulvinar sem pharetra nec. 
 
 Cras egestas velit vel consectetur dapibus. Vivamus in enim sed lacus egestas tempor. Phasellus bibendum sagittis rhoncus. Aliquam semper, turpis vitae vestibulum accumsan, ligula felis cursus quam, vitae suscipit ipsum velit sit amet ipsum. Nunc laoreet erat vel pretium venenatis. Nulla facilisi. Mauris tincidunt nisl vel massa placerat vulputate. Fusce porta est in velit commodo maximus. Sed ac tempor libero.
 
