--- a/Projetos/Aula01 - LaTeX/artigo.tex
+++ b/Projetos/Aula01 - LaTeX/artigo.tex
@@ -45,7 +45,8 @@ $$
 
 A Equação~\ref{eq_peppers} define a média das somas.
 
-\begin{equation}\label{eq_peppers}
+\begin{equation}
+\label{eq_peppers}
 A = \frac{\pi r^2}{2} = \frac{1}{2} \pi r^2   
 \end{equation} 
           
