:bug: Adicionado self aos métodos da classe

--- a/Projetos/Busca_sem_informacao.ipynb
+++ b/Projetos/Busca_sem_informacao.ipynb
@@ -49,11 +49,11 @@
         "    def estado_inicial(self):\n",
         "        return Estado([[],['D'],['M', 'M', 'M', 'C', 'C', 'C']]\n",
         "\n",
-        "    def estado_objetivo(estado):\n",
+        "    def estado_objetivo(self, estado):\n",
         "        objetivo =  Estado([['M', 'M', 'M', 'C', 'C', 'C'], ['E'], []])\n",
         "        return estado == objetivo\n",
         "\n",
-        "    def solucao(estado):\n",
+        "    def solucao(self, estado):\n",
         "        resultado = []\n",
         "        ptr = estado\n",
         "        while not ptr.pai:\n",
@@ -62,7 +62,7 @@
         "\n",
         "        return resultado.reverse()\n",
         "        \n",
-        "    def modelo_transicao(estado):\n",
+        "    def modelo_transicao(self, estado):\n",
         "        \"\"\"\n",
         "        [[margem_esq], [barco], [margem_dir]]\n",
         "\n",
@@ -193,7 +193,7 @@
         "    print(linha)\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
